# cldfviz

./: CHANGELOG.md  README.md  RELEASING.md  setup.cfg  setup.py
.github/workflows/: python-package.yml
docs/: audiowordlist.md  colormaps.md  erd.md  examples.md  map.md  network.md  text.md  tree.md  treemap.md  wals_algic.md
docs/output/: wals_algic.md
docs/text_example/: README.md  README_tmpl.md
src/cldfviz/: __init__.py  cli_util.py  colormap.py  glottolog.py  media.py  multiparameter.py  pdutils.py  template.py  text.py  tree.py
src/cldfviz/commands/: audiowordlist.py  erd.py  examples.py  htmlmap.py  map.py  network.py  text.py  tree.py  treemap.py
src/cldfviz/map/: __init__.py  base.py  leaflet.py  mpl.py
src/cldfviz/templates/audiowordlist/: audiowordlist.html
src/cldfviz/templates/examples/: examples.html
src/cldfviz/templates/htmlmap/: htmlmap.html  htmlmap.js
src/cldfviz/templates/map/: README.md  ecoregions.js  leaflet.html
src/cldfviz/templates/text/: BorrowingTable_detail.md  CodeTable_detail.md  CognateTable_detail.md  CognateTable_index.md  CognatesetTable_detail.md  ContributionTable_detail.md  ContributionTable_index.md  EntryTable_detail.md  ExampleTable_detail.md  FormTable_detail.md  LanguageTable_detail.md  LanguageTable_index.md  Metadata_detail.md  ParameterTable_detail.md  ParameterTable_index.md  Source_detail.md  Source_index.md  property.md  util.md
tests/: conftest.py  test_cli.py  test_cli_util.py  test_colormap.py  test_glottolog.py  test_map.py  test_multiparameter.py  test_text.py  test_tree.py
tests/Dictionary/: Dictionary-metadata.json  entries.csv  senses.csv
tests/Generic/: Generic-metadata.json  forms.csv  languages.csv  parameters.csv  sources.bib
tests/StructureDataset/: StructureDataset-metadata.json  examples.csv  languages.csv  media.csv  parameter_network.csv  sources.bib  trees.csv  values.csv
tests/StructureDataset_listvalued_glottocode/: StructureDataset-metadata.json  codes.csv
tests/Wordlist/: Wordlist-metadata.json  borrowings.csv  cognates.csv  cognatesets.csv  contributions.csv  forms.csv  languages.csv  media.csv  parameters.csv  sources.bib
tests/glottolog/languoids/tree/abcd1234/: md.ini
tests/glottolog/languoids/tree/abcd1234/abcd1237/: md.ini
tests/glottolog/languoids/tree/book1242/book1243/: md.ini
tests/glottolog/languoids/tree/isol1234/: md.ini
tests/glottolog/languoids/tree/isol1234/dial1234/: md.ini
