[metadata]
name = cldfviz
version = 0.9.1.dev0
author = Robert Forkel
author_email = dlce.rdm@eva.mpg.de
description = A cldfbench plugin to create vizualisations of CLDF datasets
long_description = file: README.md
long_description_content_type = text/markdown
keywords = cldfbench
license = Apache 2.0
license_files = LICENSE
url = https://github.com/cldf/cldfviz
project_urls =
    Bug Tracker = https://github.com/cldf/cldfviz/issues
platforms = any
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: Apache Software License

[options]
zip_safe = False
packages = find:
package_dir =
    = src
python_requires = >=3.7
install_requires =
    clldutils>=3.11.1
    pycldf>=1.26
    cldfbench>=1.11.0
    attrs
    termcolor
    jinja2
    pyglottolog
    tqdm
    yattag
    matplotlib
    numpy
    jmespath
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
pycldf =
    components/*
    modules/*

[options.entry_points]
cldfbench.commands =
    cldfviz = cldfviz.commands

[options.extras_require]
cartopy =
    # Newer cartopy requires PROJ >= 8 which isn't available by default
    # on current Ubuntu.
    cartopy<0.20
    scipy
lingtreemaps =
    lingtreemaps
    pandas
    biopython
dev =
    flake8
    wheel
    build
    twine
test =
    pytest>=5
    pytest-mock
    pytest-cov
    coverage>=4.2

[bdist_wheel]
universal = 1

[flake8]
ignore = E711,E712,D100,D101,D103,D102,D301,W503
max-line-length = 100
exclude = .tox

[tool:pytest]
minversion = 5
testpaths = tests
addopts = --cov

[easy_install]
zip_ok = false

[coverage:run]
source =
    cldfviz
    tests

[coverage:report]
show_missing = true
skip_covered = true

[tox:tox]
envlist = py37, py38, py39, py310
isolated_build = true
skip_missing_interpreter = true

[testenv]
deps = .[test]
commands = pytest {posargs}
