[metadata]
name = cldfviz
version = 1.3.0
author = Robert Forkel
author_email = dlce.rdm@eva.mpg.de
description = A cldfbench plugin to create vizualisations of CLDF datasets
long_description = file: README.md
long_description_content_type = text/markdown
keywords = cldfbench
license = Apache 2.0
license_files = LICENSE
url = https://github.com/cldf/cldfviz
project_urls =
    Bug Tracker = https://github.com/cldf/cldfviz/issues
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: Apache Software License

[options]
zip_safe = False
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =
    packaging
    clldutils>=3.17
    pycldf>=1.32.0
    cldfbench>=1.11.0
    attrs
    termcolor
    jinja2
    pyglottolog
    tqdm
    matplotlib
    numpy
    newick>=1.6
    toytree~=2.0.1
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
pycldf =
    components/*
    modules/*

[options.entry_points]
cldfbench.commands =
    cldfviz = cldfviz.commands

[options.extras_require]
cartopy =
    shapely
    cartopy
    scipy
lingtreemaps =
    shapely
    lingtreemaps
    pandas
    biopython
    pyyaml
dev =
    flake8
    wheel
    build
    twine
network =
    networkx
test =
    networkx
    pytest>=5
    pytest-mock
    pytest-cov
    coverage>=4.2
    requests-mock

[bdist_wheel]
universal = 1

[flake8]
ignore = E711,E712,D100,D101,D103,D102,D301,W503
max-line-length = 100
exclude = .tox

[tool:pytest]
minversion = 5
testpaths = tests
addopts = --cov

[easy_install]
zip_ok = false

[coverage:run]
source =
    cldfviz
    tests

[coverage:report]
show_missing = true
skip_covered = true

[tox:tox]
envlist = py38, py39, py310, py311, py312
isolated_build = true
skip_missing_interpreter = true

[testenv]
deps = .[test]
commands = pytest {posargs}
